# simtoi

./: .cproject  .gitignore  .gitmodules  .project  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  Ubuntu-12_04.md  Ubuntu-14_04.md  ignorelist.txt
CMakeModules/: FindCCFITS.cmake  FindCCOIFITS.cmake  FindLIBOI.cmake  FindMultiNest.cmake  FindNLopt.cmake  FindOpenCL.cmake  FindTEXTIO.cmake  SetVersion.cmake
doc/: Doxyfile  simtoi_logic.odg
lib/: CMakeLists.txt  UpdateLibs.sh
lib/chealpix/: CMakeLists.txt  Makefile  chealpix.h  pix2vec_nest.c
lib/cmpfit-1.2/: CMakeLists.txt
lib/jsoncpp/: CMakeLists.txt
lib/jsoncpp/src/lib_json/: CMakeLists.txt
lib/levmar/: CMakeLists.txt
samples/: 2011Nov03-epsAur-avg5.oifits  2011Nov03-epsAur-avg5_noT3.oifits  LDD-2_0-0_5.fits  LDD-2_0mas-0_5alpha.json  LDD-2_0mas-0_5alpha.oifits  LDD-2_0mas-0_5alpha_v2only.oifits  PROLATE_C_03.oifits  README.md  epsAur_AAVSO_H.phot  epsAur_AAVSO_H_sampled.phot  epsAur_LDD.sh  epsAur_remote_LDD.sh  epsAur_star.json  epsAur_star_RingedDisk.json  epsAur_star_cylinder.json  ld2.77_0.24_50px.fits  ld2.77_0.24_50px.oifits  ldd_2_0mas-quadrad_a0_1_b0_7.json  ldd_fit.sh  oblate_spheroid.json  prolate_spotted.json  roche_binary.json  roche_lobe.json  rotation_test.json  three_spot_test.json
samples/epsAur/: B.phot  H.phot  I.phot  J.phot  R.phot  U.phot  V.phot  epsAur_star_PascucciDisk_multiepoch_tilted_multinest_ingress.json  eps_Aur.2009-11.AVG15m.oifits  eps_Aur.2009-12.AVG15m.oifits  eps_Aur.2010-08.AVG15m.oifits
samples/limb-darkened-models/: ldd_2_0mas-quadrad_a0_1_b0_7.json  (+1 more)
src/: CData.cpp  CData.h  CDataHandler.cpp  CDataHandler.h  CDataInfo.cpp  CDataInfo.h  CFeature.cpp  CFeature.h  CFeatureFactory.cpp  CFeatureFactory.h  CFeatureList.cpp  CFeatureList.h  CGLShader.cpp  CGLShader.h  CGLShaderList.cpp  CGLShaderList.h  CGLShaderWrapper.cpp  CGLShaderWrapper.h  CGLShader_LD_Hestroffer1997.cpp  CGLShader_LD_Hestroffer1997.h  CMakeLists.txt  CMinimizer.cpp  CMinimizer.h  CMinimizerFactory.cpp  CMinimizerFactory.h  CMinimizer_Benchmark.cpp  CMinimizer_Benchmark.h  CMinimizer_Bootstrap.cpp  CMinimizer_Bootstrap.h  CMinimizer_GridSearch.cpp  CMinimizer_GridSearch.h  CMinimizer_MultiNest.cpp  CMinimizer_MultiNest.cppx  CMinimizer_MultiNest.h  CMinimizer_MultiNest.hx  CMinimizer_MultiNest.xh  CMinimizer_Test.cpp  CMinimizer_Test.h  CMinimizer_Verify.cpp  CMinimizer_Verify.h  (+70 more)
src/QT/: CAnimator.cpp  CAnimator.h  CCL_GLThread.cpp  CCL_GLThread.h  CGLThread.cpp  CGLThread.h  CGLWidget.cpp  CGLWidget.h  CMakeLists.txt  CMinimizer.cpp  CMinimizer.h  CMinimizerThread.cpp  CMinimizerThread.h  CParameterItem.cpp  CParameterItem.h  CTreeModel.cpp  CTreeModel.h  CWorkerThread.cpp  CWorkerThread.h  cmaingui.cpp  cmaingui.h  cmaingui.ui  guiCommon.cpp  guiCommon.h  guiMain.cpp  guiMain.h  guiMain.ui  guiModel.cpp  guiModel.h  guiModel.ui  guiModelEditor.cpp  guiModelEditor.h  guiModelEditor.ui  guiRegion.cpp  guiRegion.h  guiRegion.ui  gui_common.h  gui_general.h  gui_main.cpp  gui_main.h  (+19 more)
src/data/: CMakeLists.txt  CPhotometry.cpp  CPhotometry.h
src/features/: CMakeLists.txt  CUniformSpot.cpp  CUniformSpot.h  load_features.cpp  load_features.h
src/minimizers/: CBenchmark.cpp  CBenchmark.h  CBootstrap_Levmar.cpp  CBootstrap_Levmar.h  CGridSearch.cpp  CGridSearch.h  CLevmar.cpp  CLevmar.h  CMakeLists.txt  CMinimizer_Benchmark.cpp  CMinimizer_Benchmark.h  CMinimizer_Bootstrap.cpp  CMinimizer_Bootstrap.h  CMinimizer_GridSearch.cpp  CMinimizer_GridSearch.h  CMinimizer_MultiNest.cpp  CMinimizer_MultiNest.h  CMinimizer_levmar.cpp  CMinimizer_levmar.h  CMultiNest.cpp  CMultiNest.h  CNLopt.cpp  CNLopt.h  load_minimizers.cpp  load_minimizers.h
src/models/: CCylinder.cpp  CCylinder.h  CDensityDisk.cpp  CDensityDisk.h  CDisk_A.cpp  CDisk_A.h  CDisk_Alpha1973.cpp  CDisk_Alpha1973.h  CDisk_Andrews2009.cpp  CDisk_Andrews2009.h  CDisk_B.cpp  CDisk_B.h  CDisk_C.cpp  CDisk_C.h  CDisk_ConcentricRings.cpp  CDisk_ConcentricRings.h  CDisk_Pascucci2004.cpp  CDisk_Pascucci2004.h  CHealpixSpheroid.cpp  CHealpixSpheroid.h  CMakeLists.txt  CModelDisk.cpp  CModelDisk.h  CModelDisk_A.cpp  CModelDisk_A.h  CModelDisk_B.cpp  CModelDisk_B.h  CModelDisk_C.cpp  CModelDisk_C.h  CModelDisk_ConcentricRings.cpp  CModelDisk_ConcentricRings.h  CModelSphere.cpp  CModelSphere.h  CRocheBinary.cpp  CRocheBinary.h  CRocheLobe.cpp  CRocheLobe.h  CRocheLobe_FF.cpp  CRocheLobe_FF.h  CRocheRotator.cpp  (+9 more)
src/positions/: CLinearMotion.cpp  CLinearMotion.h  CPositionOrbit.cpp  CPositionOrbit.h  CPositionOrbitQuadratic.cpp  CPositionOrbitQuadratic.h  CPositionXY.cpp  CPositionXY.h  CPositionXYZ.cpp  CPositionXYZ.h  load_positions.cpp  load_positions.h
src/scripts/: CMakeLists.txt  InsertSpaces.awk  MultiNestToHistogram.py  PlotHistogram.py  README  parse_multineststats.py  plot_bootstrap.py  plot_data.py  plot_histogram.py  plot_multinest.py  run_models.py  scripted_bootstrap.py  simtoi_common.py
src/shaders/: Default.frag  Default.vert  LDL_Claret2000.frag  LDL_Claret2000.vert  LDL_PowerLaw.vert  LDL_Quadratic.vert  LD_Hestroffer1997.frag  LD_Hestroffer1997.vert  ScaleHeight.frag  ScaleHeight.vert  default.json  default_frag.glsl  default_vert.glsl  disk_alpha1973.json  disk_alpha1973_frag.glsl  disk_andrews2009.json  disk_andrews2009_frag.glsl  disk_pascucci2004.json  disk_pascucci2004_frag.glsl  disk_power_law.json  disk_power_law_frag.glsl  ldl_claret2000.frag  ldl_claret2000.json  ldl_claret2000_frag.glsl  ldl_fields2003.frag  ldl_fields2003.json  ldl_fields2003.vert  ldl_fields2003_frag.glsl  ldl_logarithmic.frag  ldl_logarithmic.json  ldl_logarithmic.vert  ldl_logarithmic_frag.glsl  ldl_power_law.frag  ldl_power_law.json  ldl_power_law_frag.glsl  ldl_quadratic.frag  ldl_quadratic.json  ldl_quadratic.vert  ldl_quadratic_frag.glsl  ldl_square_root.frag  (+11 more)
src/tasks/: COI.cpp  COI.h  CPhotometry.cpp  CPhotometry.h
src/threads/: CMakeLists.txt  COpenGLThread.cpp  COpenGLThread.h
src/ui/: CGLWidget.cpp  CGLWidget.h  CMakeLists.txt  COpenGL.cpp  COpenGL.h  CUI.cpp  CUI.h  CUI.ui
src/workers/: COI.cpp  COI.h
(+14 files in other folders)
